# fastapi-whiskies-api

./: README.asciidoc  README.md  pyproject.toml
tests/: test_whiskies_endpoints.py
whiskies_api/: main.py
whiskies_api/models/: whisky.py
