[tool.poetry]
name = "whiskies-api"
version = "0.1.0"
description = ""
authors = ["Xavier Bouclet <xavier.bouclet@qc.croixbleue.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pymongo = "^4.6.1"
motor = "^3.3.2"

[tool.poetry.scripts]
start = "whiskies_api.main:start"

[tool.poetry.group.dev.dependencies]
testcontainers = "^3.7.1"
pytest = "^8.0.0"
motor = "^3.3.2"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
